# serializer version: 1
# name: TestCommoditiesBalancesList.test_empty_result
  dict({
    'data': list([
    ]),
    'pagination': dict({
      'count': 0,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_filter_by_commodity_group
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '8714',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'front',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'ok',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-00000000000a',
        'volume': 724.18,
      }),
    ]),
    'pagination': dict({
      'count': 1,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_filter_by_commodity_id
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'seat',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'fish',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-00000000000d',
        'volume': 128.85,
      }),
    ]),
    'pagination': dict({
      'count': 1,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_forbidden
  dict({
    'code': 'drf.permission_denied',
    'message': 'At least one verified gadget is required',
    'success': False,
  })
# ---
# name: TestCommoditiesBalancesList.test_order_by_amount_asc
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '1858',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000001',
            'name': 'light',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000001',
          'name': 'Democrat',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000021',
        'volume': 10.0,
      }),
      dict({
        'commodity': dict({
          'code': '1965',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000002',
            'name': 'fill',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000002',
          'name': 'parent',
          'unit': 'pcs',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000022',
        'volume': 30.0,
      }),
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'seat',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'fish',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000020',
        'volume': 50.0,
      }),
    ]),
    'pagination': dict({
      'count': 3,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_order_by_amount_desc
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'seat',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'fish',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000023',
        'volume': 50.0,
      }),
      dict({
        'commodity': dict({
          'code': '1965',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000002',
            'name': 'fill',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000002',
          'name': 'parent',
          'unit': 'pcs',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000025',
        'volume': 30.0,
      }),
      dict({
        'commodity': dict({
          'code': '1858',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000001',
            'name': 'light',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000001',
          'name': 'Democrat',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000024',
        'volume': 10.0,
      }),
    ]),
    'pagination': dict({
      'count': 3,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_order_by_commodity_name_asc
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5839',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000001',
            'name': 'light',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000001',
          'name': 'Apple',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-00000000001b',
        'volume': 94.96,
      }),
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'ok',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'Banana',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-00000000001a',
        'volume': 299.18,
      }),
      dict({
        'commodity': dict({
          'code': '5934',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000002',
            'name': 'current',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000002',
          'name': 'Cherry',
          'unit': 'pcs',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-00000000001c',
        'volume': 842.2,
      }),
    ]),
    'pagination': dict({
      'count': 3,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_order_by_commodity_name_desc
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5934',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000002',
            'name': 'current',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000002',
          'name': 'Cherry',
          'unit': 'pcs',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-00000000001f',
        'volume': 842.2,
      }),
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'ok',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'Banana',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-00000000001d',
        'volume': 299.18,
      }),
      dict({
        'commodity': dict({
          'code': '5839',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000001',
            'name': 'light',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000001',
          'name': 'Apple',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-00000000001e',
        'volume': 94.96,
      }),
    ]),
    'pagination': dict({
      'count': 3,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_pagination[1-2]
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'seat',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'fish',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000010',
        'volume': 128.85,
      }),
      dict({
        'commodity': dict({
          'code': '8398',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000001',
            'name': 'light',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000001',
          'name': 'people',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000011',
        'volume': 94.96,
      }),
    ]),
    'pagination': dict({
      'count': 5,
      'next_page': 2,
      'page': 1,
      'page_size': 2,
      'previous_page': None,
      'total_pages': 3,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_pagination[2-2]
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5934',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000002',
            'name': 'term',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000002',
          'name': 'create',
          'unit': 'pcs',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000017',
        'volume': 192.09,
      }),
      dict({
        'commodity': dict({
          'code': '4711',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000003',
            'name': 'under',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000003',
          'name': 'respond',
          'unit': 'pcs',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000018',
        'volume': 154.01,
      }),
    ]),
    'pagination': dict({
      'count': 5,
      'next_page': 3,
      'page': 2,
      'page_size': 2,
      'previous_page': 1,
      'total_pages': 3,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_search_by_commodity_code
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'seat',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'fish',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000007',
        'volume': 128.85,
      }),
    ]),
    'pagination': dict({
      'count': 1,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_search_by_commodity_name
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'seat',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'fish',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000004',
        'volume': 128.85,
      }),
    ]),
    'pagination': dict({
      'count': 1,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_success
  dict({
    'data': list([
      dict({
        'commodity': dict({
          'code': '5871',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000000',
            'name': 'seat',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000000',
          'name': 'fish',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000000',
        'volume': 128.85,
      }),
      dict({
        'commodity': dict({
          'code': '8398',
          'group': dict({
            'id': '00000000-0000-0000-0000-000000000001',
            'name': 'light',
          }),
          'has_recipe': False,
          'id': '00000000-0000-0000-0000-000000000001',
          'name': 'people',
          'unit': 'tons',
        }),
        'has_recipe': False,
        'id': '00000000-0000-0000-0000-000000000001',
        'volume': 94.96,
      }),
    ]),
    'pagination': dict({
      'count': 2,
      'next_page': None,
      'page': 1,
      'page_size': 20,
      'previous_page': None,
      'total_pages': 1,
    }),
    'success': True,
  })
# ---
# name: TestCommoditiesBalancesList.test_unauthorized
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestCommoditiesBalancesList.test_user_deleted
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
